scrollbar fix

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,6 @@ body {
   background-image: url("/img/image.png");
   background-color: black;
   min-width: 100%;
-  max-height: 100vh;
-  min-height: 100vh;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
